django-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django-project
spec:
  selector:
    app: django-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
